--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -22,6 +22,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/textViewTimerTask"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="66dp"
+        android:layout_marginTop="90dp"
+        android:layout_marginBottom="0dp"
+        android:text="Task"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="21sp"
+        app:layout_constraintBottom_toTopOf="@+id/textViewTime"
+        app:layout_constraintEnd_toStartOf="@+id/imageViewPause"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/imageViewPause"
         android:layout_width="0dp"
@@ -52,12 +68,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewTimerTitle" />
 
+
+
     <ImageView
         android:id="@+id/imageViewNext"
         android:layout_width="72dp"
         android:layout_height="71dp"
         android:layout_marginEnd="5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="17dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageViewPrevious"
@@ -71,7 +89,7 @@
         android:layout_height="71dp"
         android:layout_marginStart="4dp"
         android:layout_marginEnd="242dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageViewNext"
         app:layout_constraintStart_toStartOf="parent"
