--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -5,13 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TimerActivity">
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:background="@color/colorPrimary"
+        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textViewTimerTitle"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_marginStart="66dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="40dp"
         android:layout_marginBottom="25dp"
         android:text="Title"
         android:textAlignment="center"
@@ -27,7 +38,7 @@
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_marginStart="66dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="130dp"
         android:layout_marginBottom="0dp"
         android:text="Task"
         android:textAlignment="center"
@@ -42,7 +53,7 @@
         android:id="@+id/imageViewPause"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="552dp"
         app:layout_constraintBottom_toTopOf="@+id/imageViewNext"
@@ -51,6 +62,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_pause"
         tools:ignore="VectorDrawableCompat" />
+
 
     <TextView
         android:id="@+id/textViewTime"
@@ -65,17 +77,16 @@
         android:textSize="128sp"
         app:layout_constraintBottom_toTopOf="@+id/imageViewPrevious"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewTimerTitle" />
-
-
 
     <ImageView
         android:id="@+id/imageViewNext"
         android:layout_width="72dp"
         android:layout_height="71dp"
         android:layout_marginEnd="5dp"
-        android:layout_marginBottom="17dp"
+        android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageViewPrevious"
@@ -89,7 +100,6 @@
         android:layout_height="71dp"
         android:layout_marginStart="4dp"
         android:layout_marginEnd="242dp"
-        android:layout_marginBottom="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageViewNext"
         app:layout_constraintStart_toStartOf="parent"
@@ -101,10 +111,10 @@
         android:id="@+id/listViewTimer"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        tools:layout_editor_absoluteX="21dp"
-        tools:layout_editor_absoluteY="377dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toStartOf="@+id/imageViewNext"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTime"/>
+        app:layout_constraintTop_toBottomOf="@+id/textViewTime" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
